# vma-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
ash-mem-alloc/: Cargo.toml  build.rs
ash-mem-alloc/examples/: simple.rs
ash-mem-alloc/src/: bindings.rs  enums.rs  ffi.rs  function_ptrs.rs  functions.rs  handles.rs  lib.rs  structs.rs  vma.cpp
generator/: Cargo.toml
generator/src/: enums.rs  functions.rs  header.h  main.rs  parsing.rs  structs.rs
vma/: Cargo.toml  build.rs
vma-sys/: Cargo.toml  README.md  build.rs
vma-sys/src/: bindings.rs  lib.rs  vma.cpp
vma/examples/: simple.rs
vma/src/: bindings.rs  enums.rs  function_ptrs.rs  handles.rs  lib.rs  structs.rs  vma.cpp
vma/tests/: allocations.rs  struct_layout.rs
