[package]
name = "generator"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = { version = "2.0.0", features = ["clang_10_0", "runtime"] }
convert_case = "0.6.0"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = "2.0.22"
