[package]
name = "vma"
version = "0.1.0"
authors = [ "Robin Quint" ]
edition = "2021"
description = "Bindings to the Vulkan Memory Allocator library using ash structs"
repository = "https://github.com/Rob2309/vma-rs"
keywords = [ "vulkan", "ash", "vma", "memory", "allocator" ]
categories = [ "api-bindings", "graphics", "memory-management" ]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.2"
bitflags = "1.3.2"
vma-sys = { version="0.1.0", path="../vma-sys" }
