[package]
name = "vma"
version = "0.1.0"
authors = [ "Robin Quint" ]
edition = "2021"
description = "Ash-style bindings to the Vulkan Memory Allocator"
readme = "../README.md"
repository = "https://github.com/rob2309/vma-rs"
license = "MIT"
keywords = [ "vulkan", "ash", "memory", "allocator", "vma" ]
categories = [ "api-bindings", "external-ffi-bindings", "graphics", "memory-management" ]
links = "vma"

exclude = [ 
    "vendor/**", 
    "!vendor/vma/include/**",
    "!vendor/vk-headers/include/vulkan/**",
]

[dependencies]
ash = "0.37.3"

[build-dependencies]
cc = "1.0.79"
